Capitalize dirs for consistency

--- a/.env.example
+++ b/.env.example
@@ -21,9 +21,9 @@ WEBHOOK_TUNNEL_URL=https://$NGROK_URL
 # Minio
 MINIO_ROOT_USER=admin
 MINIO_ROOT_PASSWORD=your_secure_password
-MINIO_NOTIFY_WEBHOOK_ENABLE_N8N=on
-MINIO_NOTIFY_WEBHOOK_ENDPOINT_N8N=http://n8n:5678/webhook/s3
-MINIO_NOTIFY_WEBHOOK_QUEUE_DIR_N8N=/webhook
+MINIO_NOTIFY_NSQ_ENABLE_EXIST="on"
+MINIO_NOTIFY_NSQ_NSQD_ADDRESS_EXIST="nsqd:4150"
+MINIO_NOTIFY_NSQ_TOPIC_EXIST="minio"
 
 # Redis
 REDIS_PASSWORD=your_secure_password
