--- a/Collabora/docker-compose.yml
+++ b/Collabora/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: collabora
     image: collabora/code:latest
     restart: unless-stopped
+    network_mode: "bridge"
     env_file:
       - ../.env
     environment:
