--- a/N8N/docker-compose.yml
+++ b/N8N/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: n8n
     image: docker.n8n.io/n8nio/n8n
     restart: unless-stopped
+    network_mode: "bridge"
     env_file:
       - ../.env
     ports:
