--- a/Nextcloud/docker-compose.yml
+++ b/Nextcloud/docker-compose.yml
@@ -5,12 +5,13 @@ services:
     container_name: nextcloud
     image: nextcloud:latest
     restart: unless-stopped
+    network_mode: "bridge"
     env_file:
       - ../.env
     ports:
       - "8421:80"
     volumes:
-      - ./nextcloud_data:/var/www/html
+      - nextcloud_data:/var/www/html
     environment:
       - NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_ADMIN_USER}
       - NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_ADMIN_PASSWORD}
@@ -21,10 +22,6 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - REDIS_HOST_PASSWORD=${REDIS_PASSWORD}
-    links:
-      - nextcloudsql
-    depends_on:
-      - minio
 
   # Database for Nextcloud
   nextcloudsql:
@@ -35,9 +32,23 @@ services:
       - ../.env
     command: --transaction-isolation=READ-COMMITTED --log-bin=binlog --binlog-format=ROW
     volumes:
-      - ./nextcloudsql_data:/var/lib/mysql
+      - nextcloudsql_data:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=${NEXTCLOUD_ROOT_PASSWORD}
       - MYSQL_PASSWORD=${NEXTCLOUD_SQL_PASSWORD}
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
+
+volumes:
+  nextcloud_data:
+    driver: local
+    driver_opts:
+      type: "nfs"
+      o: "addr=${TRUENAS_SERVER_ADDRESS},nolock,soft,rw,nfsvers=4"
+      device: ":${TRUENAS_CONTAINER_PATH}/nextcloud_data"
+  nextcloudsql_data:
+    driver: local
+    driver_opts:
+      type: "nfs"
+      o: "addr=${TRUENAS_SERVER_ADDRESS},nolock,soft,rw,nfsvers=4"
+      device: ":${TRUENAS_CONTAINER_PATH}/nextcloudsql_data"
