--- a/NocoDB/docker-compose.yml
+++ b/NocoDB/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     container_name: nocodb_postgres
     image: postgres:16.6
     restart: unless-stopped
+    network_mode: "bridge"
     env_file:
       - ../.env
     environment: 
