--- a/OpenWebUI/docker-compose.yml
+++ b/OpenWebUI/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: open-webui
     image: ghcr.io/open-webui/open-webui:main
     restart: unless-stopped
+    network_mode: "bridge"
     env_file:
       - ../.env
     ports:
