--- a/Redis/docker-compose.yml
+++ b/Redis/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: redis
     image: redis:alpine
     restart: unless-stopped
+    network_mode: "bridge"
     env_file:
       - ../.env
     command:
