--- a/N8N/docker-compose.yml
+++ b/N8N/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     container_name: n8n
     image: docker.n8n.io/n8nio/n8n
     restart: unless-stopped
-    network_mode: "bridge"
+    networks:
+      - exist
     env_file:
       - ../.env
     ports:
@@ -20,3 +21,7 @@ services:
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
     volumes:
       - ./n8n_data:/home/node/.n8n
+
+networks:
+  exist:
+    external: true
