--- a/Collabora/docker-compose.yml
+++ b/Collabora/docker-compose.yml
@@ -4,7 +4,8 @@ services:
     container_name: collabora
     image: collabora/code:latest
     restart: unless-stopped
-    network_mode: "bridge"
+    networks:
+      - exist
     env_file:
       - ../.env
     environment:
@@ -14,3 +15,7 @@ services:
       # - extra_params=--o:ssl.enable=true
     ports:
       - 9980:9980
+
+networks:
+  exist:
+    external: true
