--- a/Qdrant/docker-compose.yml
+++ b/Qdrant/docker-compose.yml
@@ -5,10 +5,15 @@ services:
     container_name: qdrant
     image: qdrant/qdrant:latest
     restart: unless-stopped
-    network_mode: "bridge"
+    networks:
+      - exist
     env_file:
       - ../.env
     ports:
       - "6333:6333"
     volumes:
       - ./qdrant_data:/qdrant/storage
+
+networks:
+  exist:
+    external: true
