--- a/Redis/docker-compose.yml
+++ b/Redis/docker-compose.yml
@@ -4,7 +4,8 @@ services:
     container_name: redis
     image: redis:alpine
     restart: unless-stopped
-    network_mode: "bridge"
+    networks:
+      - exist
     env_file:
       - ../.env
     command:
@@ -19,3 +20,7 @@ services:
       - "6379:6379"
     volumes:
       - ./redis_data:/data
+
+networks:
+  exist:
+    external: true
