--- a/Nextcloud/.env.example
+++ b/Nextcloud/.env.example
@@ -6,7 +6,7 @@ TRUENAS_CONTAINER_PATH=/mnt/something/minio
 REDIS_PASSWORD=your_secure_password
 
 # Nextcloud
-NEXTCLOUD_DOMAIN=192.168.1.100,yourdomain.com
+NEXTCLOUD_DOMAIN=192.168.1.100
 NEXTCLOUD_ADMIN_USER=admin
 NEXTCLOUD_ADMIN_PASSWORD=your_secure_password
 NEXTCLOUD_SQL_PASSWORD=your_secure_password
