--- a/Nextcloud/docker-compose.yml
+++ b/Nextcloud/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - nextcloud_data:/var/www/html
     environment:
       - NEXTCLOUD_TRUSTED_DOMAINS=${NEXTCLOUD_DOMAIN}
+      - NEXTCLOUD_TRUSTED_PROXIES=caddy
       - NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_ADMIN_USER}
       - NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_ADMIN_PASSWORD}
       - MYSQL_PASSWORD=${NEXTCLOUD_SQL_PASSWORD}
