Configure caddy with cloudflare certs

--- a/Caddy/docker-compose.yml
+++ b/Caddy/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - ./Caddyfile:/etc/caddy/Caddyfile:ro
       - caddy_data:/data
       - caddy_config:/config
+      - ../Cloudflare/cloudflare.pem:/etc/caddy/certs/cloudflare.crt:ro
+      - ../Cloudflare/cloudflare-key.pem:/etc/caddy/certs/cloudflare.key:ro
 
 volumes:
   caddy_data:
