--- a/Nextcloud/.env.example
+++ b/Nextcloud/.env.example
@@ -6,6 +6,7 @@ TRUENAS_CONTAINER_PATH=/mnt/something/minio
 REDIS_PASSWORD=your_secure_password
 
 # Nextcloud
+NETWORK_GATEWAY_IP=172.17.0.1 # Find by running `docker network inspect bridge`
 NEXTCLOUD_DOMAIN=192.168.1.100
 NEXTCLOUD_ADMIN_USER=admin
 NEXTCLOUD_ADMIN_PASSWORD=your_secure_password
