--- a/Nextcloud/.env.example
+++ b/Nextcloud/.env.example
@@ -6,8 +6,8 @@ TRUENAS_CONTAINER_PATH=/mnt/something/minio
 REDIS_PASSWORD=your_secure_password
 
 # Nextcloud
-NETWORK_GATEWAY_IP=172.17.0.1 # Find by running `docker network inspect bridge`
-NEXTCLOUD_DOMAIN=192.168.1.100
+TRUSTED_PROXIES=172.18.0.0/12 # Needs to cover the IP address of the reverse proxy (Caddy)
+NEXTCLOUD_DOMAIN=nextcloud.example.com
 NEXTCLOUD_ADMIN_USER=admin
 NEXTCLOUD_ADMIN_PASSWORD=your_secure_password
 NEXTCLOUD_SQL_PASSWORD=your_secure_password
