--- a/Collabora/.env.example
+++ b/Collabora/.env.example
@@ -1,3 +1,7 @@
 # Collabora
 COLLABORA_USERNAME=admin
 COLLABORA_PASSWORD=your_secure_password
+COLLABORA_DOMAIN=collabora.example.com
+
+# Nextcloud
+NEXTCLOUD_DOMAIN=nextcloud.example.com
