--- a/Caddy/Caddyfile.example
+++ b/Caddy/Caddyfile.example
@@ -3,12 +3,23 @@ nextcloud.example.com {
   redir /.well-known/carddav /remote.php/dav/ 301
   redir /.well-known/caldav /remote.php/dav/ 301
 
-
   # the mapped port in caddy should be to the port on the container
   # not the port mapped to the host.
   # EG: a container with ports: "8421:80" would point to :80 in the Caddyfile
   reverse_proxy nextcloud:80
 }
+
+collabora.example.com {
+  tls /etc/caddy/certs/cloudflare.crt /etc/caddy/certs/cloudflare.key
+  
+  reverse_proxy collabora:9980
+}
+
+
+
+
+
+
 
 # another_domain {
   # handle_path strips the uri prefix. EG: `uri strip_prefix /blog`
