--- a/MinIO/.env.example
+++ b/MinIO/.env.example
@@ -1,3 +1,10 @@
+# Minio
+MINIO_ROOT_USER=admin
+MINIO_ROOT_PASSWORD=your_secure_password
+MINIO_NOTIFY_NSQ_ENABLE_EXIST="on"
+MINIO_NOTIFY_NSQ_NSQD_ADDRESS_EXIST="nsqd:4150"
+MINIO_NOTIFY_NSQ_TOPIC_EXIST="minio"
+
 # TrueNAS NFS
 TRUENAS_SERVER_ADDRESS=192.168.1.10
 TRUENAS_PATH=/mnt/something/minio
