--- a/NocoDB/.env.example
+++ b/NocoDB/.env.example
@@ -1,3 +1,11 @@
+# TrueNAS NFS
+TRUENAS_SERVER_ADDRESS=192.168.1.10
+TRUENAS_CONTAINER_PATH=/mnt/something/container_data
+
 # Postgres
 NOCODB_POSTGRES_USER=nocodb
 NOCODB_POSTGRES_PASSWORD=your_secure_password
+
+# NocoDB
+NC_ADMIN_EMAIL=admin@example.com
+NC_ADMIN_PASSWORD=your_secure_password
