--- a/N8N/.env.example
+++ b/N8N/.env.example
@@ -4,6 +4,10 @@ N8N_BASIC_AUTH_PASSWORD=your_secure_password
 WEBHOOK_URL=https://$NGROK_URL
 WEBHOOK_TUNNEL_URL=https://$NGROK_URL
 
+# Postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your_secure_password
+
 # Ngrok
 NGROK_URL=bcb9-12-13-14-15.app
 
