--- a/N8N/docker-compose.yml
+++ b/N8N/docker-compose.yml
@@ -20,6 +20,35 @@ services:
     volumes:
       - ./n8n_data:/home/node/.n8n
 
+  # DB used for chat agent session history
+  postgres:
+    container_name: postgres
+    image: postgres:latest
+    restart: unless-stopped
+    networks:
+      - exist
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=postgres
+    volumes:
+      - ./pg_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
+  # Vector database for RAG
+  # UI interface at http://localhost:6333/dashboard
+  qdrant:
+    container_name: qdrant
+    image: qdrant/qdrant:latest
+    restart: unless-stopped
+    networks:
+      - exist
+    ports:
+      - "6333:6333"
+    volumes:
+      - ./qdrant_data:/qdrant/storage
+
 networks:
   exist:
     external: true
