--- a/N8N/.env.example
+++ b/N8N/.env.example
@@ -1,15 +1,15 @@
+# Ngrok
+# NGROK_URL=bcb9-12-13-14-15.app
+
 # N8N
 N8N_BASIC_AUTH_USER=admin
 N8N_BASIC_AUTH_PASSWORD=your_secure_password
-WEBHOOK_URL=https://$NGROK_URL
-WEBHOOK_TUNNEL_URL=https://$NGROK_URL
+# WEBHOOK_URL=https://$NGROK_URL
+# WEBHOOK_TUNNEL_URL=https://$NGROK_URL
 
 # Postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=your_secure_password
-
-# Ngrok
-NGROK_URL=bcb9-12-13-14-15.app
 
 # Telegram
 BOT_TOKEN=***********:****************************
