--- a/N8N/.env.example
+++ b/N8N/.env.example
@@ -1,6 +1,10 @@
 # Ngrok
 # NGROK_URL=bcb9-12-13-14-15.app
 
+# TrueNAS NFS
+TRUENAS_SERVER_ADDRESS=192.168.1.10
+TRUENAS_CONTAINER_PATH=/mnt/something/container_data
+
 # N8N
 N8N_BASIC_AUTH_USER=admin
 N8N_BASIC_AUTH_PASSWORD=your_secure_password
