--- a/N8N/docker-compose.yml
+++ b/N8N/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - GENERIC_TIMEZONE=America/Denver
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
     volumes:
-      - ./n8n_data:/home/node/.n8n
+      - n8n_data:/home/node/.n8n
 
   # DB used for chat agent session history
   postgres:
@@ -32,7 +32,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=postgres
     volumes:
-      - ./pg_data:/var/lib/postgresql/data
+      - n8n_pg_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
 
@@ -47,7 +47,27 @@ services:
     ports:
       - "6333:6333"
     volumes:
-      - ./qdrant_data:/qdrant/storage
+      - n8n_qdrant_data:/qdrant/storage
+
+volumes:
+  n8n_data:
+    driver: local
+    driver_opts:
+      type: "nfs"
+      o: "addr=${TRUENAS_SERVER_ADDRESS},nolock,soft,rw,nfsvers=4"
+      device: ":${TRUENAS_CONTAINER_PATH}/n8n_data"
+  n8n_pg_data:
+    driver: local
+    driver_opts:
+      type: "nfs"
+      o: "addr=${TRUENAS_SERVER_ADDRESS},nolock,soft,rw,nfsvers=4"
+      device: ":${TRUENAS_CONTAINER_PATH}/n8n_pg_data"
+  n8n_qdrant_data:
+    driver: local
+    driver_opts:
+      type: "nfs"
+      o: "addr=${TRUENAS_SERVER_ADDRESS},nolock,soft,rw,nfsvers=4"
+      device: ":${TRUENAS_CONTAINER_PATH}/n8n_qdrant_data"
 
 networks:
   exist:
