Add example env variables for MinIO

--- a/MinIO/.env.example
+++ b/MinIO/.env.example
@@ -4,6 +4,8 @@ MINIO_ROOT_PASSWORD=your_secure_password
 MINIO_NOTIFY_NSQ_ENABLE_EXIST="on"
 MINIO_NOTIFY_NSQ_NSQD_ADDRESS_EXIST="nsqd:4150"
 MINIO_NOTIFY_NSQ_TOPIC_EXIST="minio"
+MINIO_DOMAIN=minio.example.com
+MINIO_SERVER_URL=https://minio.example.com
 
 # TrueNAS NFS
 TRUENAS_SERVER_ADDRESS=192.168.1.10
