Update activepieces env variables

--- a/ActivePieces/.env.example
+++ b/ActivePieces/.env.example
@@ -9,3 +9,5 @@ REDIS_PASSWORD=your_secure_password
 AP_POSTGRES_DATABASE=activepieces
 AP_POSTGRES_USERNAME=activepieces
 AP_POSTGRES_PASSWORD=your_secure_password
+AP_ENCRYPTION_KEY=32-character hexadecimal string. You can generate one using the command: `openssl rand -hex 16`
+AP_JWT_SECRET=your_secure_password
