--- a/Caddy/docker-compose.yml
+++ b/Caddy/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     restart: unless-stopped
     networks:
       exist:
-        ipv4_address: 172.18.0.5 # Verify by running `docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' caddy`
+        # ipv4_address: 172.18.0.5 # Verify by running `docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' caddy`
     ports:
       - "80:80" # The HTTP port
-      - "443:443" # The HTTP port
+      - "443:443" # The HTTPS port
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile:ro
       - caddy_data:/data
