--- a/MinIO/.env.example
+++ b/MinIO/.env.example
@@ -1,12 +1,14 @@
-# Minio
-MINIO_ROOT_USER=admin
-MINIO_ROOT_PASSWORD=your_secure_password
-MINIO_NOTIFY_NSQ_ENABLE_EXIST="on"
-MINIO_NOTIFY_NSQ_NSQD_ADDRESS_EXIST="nsqd:4150"
-MINIO_NOTIFY_NSQ_TOPIC_EXIST="minio"
-MINIO_DOMAIN=minio.example.com
-MINIO_SERVER_URL=https://minio.example.com
-
 # TrueNAS NFS
 TRUENAS_SERVER_ADDRESS=192.168.1.10
 TRUENAS_PATH=/mnt/something/minio
+
+# RabbitMQ
+RABBITMQ_USERNAME=minio
+RABBITMQ_PASSWORD=your_secure_password
+RABBITMQ_BROKER=tcp://192.168.1.100:1883
+
+# Minio
+MINIO_ROOT_USER=admin
+MINIO_ROOT_PASSWORD=your_secure_password
+MINIO_DOMAIN=minio.example.com
+MINIO_SERVER_URL=https://minio.example.com
