--- a/RabbitMQ/rabbitmq.conf
+++ b/RabbitMQ/rabbitmq.conf
@@ -3,4 +3,9 @@ ssl_options.cacertfile      = /etc/rabbitmq/ssl/ca.pem
 ssl_options.certfile        = /etc/rabbitmq/ssl/server_cert.pem
 ssl_options.keyfile         = /etc/rabbitmq/ssl/server_key.pem
 ssl_options.verify          = verify_peer
-ssl_options.fail_if_no_peer_cert = false
+ssl_options.fail_if_no_peer_cert = true
+
+# Add these lines to enable management stats
+management.rates_mode = basic
+collect_statistics = fine
+collect_statistics_interval = 5000
