--- a/RabbitMQ/rabbitmq.conf
+++ b/RabbitMQ/rabbitmq.conf
@@ -9,3 +9,6 @@ ssl_options.fail_if_no_peer_cert = true
 management.rates_mode = basic
 collect_statistics = fine
 collect_statistics_interval = 5000
+
+definitions.import_backend = local_filesystem
+definitions.local.path     = /etc/rabbitmq/defs.json
