--- a/MinIO/.env.example
+++ b/MinIO/.env.example
@@ -12,3 +12,6 @@ MINIO_ROOT_USER=admin
 MINIO_ROOT_PASSWORD=your_secure_password
 MINIO_DOMAIN=minio.example.com
 MINIO_SERVER_URL=https://minio.example.com
+
+# MINIO_DOMAIN=192.168.1.10
+# MINIO_SERVER_URL=http://192.168.1.10:9000
