--- a/services/nocoDB/.env.example
+++ b/services/nocoDB/.env.example
@@ -7,5 +7,5 @@ NOCODB_POSTGRES_USER=nocodb
 NOCODB_POSTGRES_PASSWORD=your_secure_password
 
 # NocoDB
-NC_ADMIN_EMAIL=admin@example.com
-NC_ADMIN_PASSWORD=your_secure_password
+NOCODB_ADMIN_EMAIL=admin@example.com
+NOCODB_ADMIN_PASSWORD=your_secure_password
