--- a/services/nocoDB/docker-compose.yml
+++ b/services/nocoDB/docker-compose.yml
@@ -30,8 +30,8 @@ services:
         condition: service_healthy
     environment: 
       NC_DB: "pg://nocodb_postgres:5432?u=${NOCODB_POSTGRES_USER}&p=${NOCODB_POSTGRES_PASSWORD}&d=nocodb_postgres"
-      NC_ADMIN_EMAIL: ${NC_ADMIN_EMAIL}
-      NC_ADMIN_PASSWORD: ${NC_ADMIN_PASSWORD}
+      NC_ADMIN_EMAIL: ${NOCODB_ADMIN_EMAIL}
+      NC_ADMIN_PASSWORD: ${NOCODB_ADMIN_PASSWORD}
     ports: 
       - "11580:8080"
     volumes: 
