--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,238 @@
-# TODO
+# Existential Stack Configuration
+# Copy this file to .env and fill in your values
+
+#==================================================#
+#               Global Configuration               #
+#==================================================#
+
+# Which services to deploy (comma-separated list)
+# Available: ai,librechat,ollama,whisper,windmill,logseq,nocodb,minio,redis,nextcloud,onlyoffice,
+#           mealie,vikunja,ntfy,appsmith,lowcoder,dashy,portainer,uptime-kuma,caddy,rabbitmq,ittools
+ENABLED_SERVICES=librechat,ollama,windmill,nocodb,minio,redis,vikunja,ntfy,dashy,portainer
+
+# Docker network subnet (must match your docker network create command)
+DOCKER_NETWORK_SUBNET=10.0.0.0/24
+
+# Logging configuration (applied to all services)
+LOG_MAX_SIZE=20m
+LOG_MAX_FILE=10
+
+#==================================================#
+#                 NAS Configuration                #
+#==================================================#
+
+# TrueNAS NFS Settings (required for persistent storage)
+TRUENAS_SERVER_ADDRESS=10.0.0.100
+TRUENAS_CONTAINER_PATH=/mnt/pool/container_data
+
+#==================================================#
+#                  AI Services                     #
+#==================================================#
+
+# LibreChat Configuration
+LIBRECHAT_ENABLED=true
+LIBRECHAT_PORT=3080
+LIBRECHAT_PG_PASSWORD=changeme_librechat_db
+LIBRECHAT_ADMIN_EMAIL=admin@example.com
+LIBRECHAT_ADMIN_PASSWORD=changeme_librechat_admin
+
+# Security keys (generate from: https://www.librechat.ai/toolkit/creds_generator)
+LIBRECHAT_CREDS_KEY=generate_from_link
+LIBRECHAT_CREDS_IV=generate_from_link
+LIBRECHAT_JWT_SECRET=generate_from_link
+LIBRECHAT_JWT_REFRESH_SECRET=generate_from_link
+LIBRECHAT_MEILI_MASTER_KEY=generate_from_link
+
+# Ollama Configuration
+OLLAMA_ENABLED=true
+OLLAMA_PORT=11434
+OLLAMA_MODELS=nomic-embed-text,llama3.2,qwen2.5-coder
+
+# Whisper Configuration  
+WHISPER_ENABLED=true
+WHISPER_PORT=9000
+WHISPER_MODEL=base
+
+#==================================================#
+#              Workflow Automation                 #
+#==================================================#
+
+# Windmill Configuration
+WINDMILL_ENABLED=true
+WINDMILL_PORT=8800
+WINDMILL_ADMIN_EMAIL=admin@example.com
+WINDMILL_ADMIN_PASSWORD=changeme_windmill_admin
+WINDMILL_PG_PASSWORD=changeme_windmill_db
+WINDMILL_SUPERADMIN_SECRET=changeme_windmill_superadmin
+WINDMILL_IMAGE=ghcr.io/windmill-labs/windmill:main
+
+#==================================================#
+#                 Data Services                    #
+#==================================================#
+
+# MinIO Configuration (S3-compatible storage)
+MINIO_ENABLED=true
+MINIO_PORT=9000
+MINIO_CONSOLE_PORT=9001
+MINIO_ROOT_USER=admin
+MINIO_ROOT_PASSWORD=changeme_minio_admin
+MINIO_DOMAIN=minio.example.com
+MINIO_SERVER_URL=https://minio.example.com
+
+# Redis Configuration
+REDIS_ENABLED=true
+REDIS_PORT=6379
+REDIS_PASSWORD=changeme_redis
+
+# NocoDB Configuration
+NOCODB_ENABLED=true
+NOCODB_PORT=8080
+NOCODB_POSTGRES_USER=nocodb
+NOCODB_POSTGRES_PASSWORD=changeme_nocodb_db
+NOCODB_ADMIN_EMAIL=admin@example.com
+NOCODB_ADMIN_PASSWORD=changeme_nocodb_admin
+
+# Nextcloud Configuration
+NEXTCLOUD_ENABLED=false
+NEXTCLOUD_PORT=8081
+NEXTCLOUD_DB_PASSWORD=changeme_nextcloud_db
+NEXTCLOUD_ADMIN_USER=admin
+NEXTCLOUD_ADMIN_PASSWORD=changeme_nextcloud_admin
+NEXTCLOUD_TRUSTED_DOMAINS=nextcloud.example.com
+
+# OnlyOffice Configuration
+ONLYOFFICE_ENABLED=false
+ONLYOFFICE_PORT=8082
+ONLYOFFICE_JWT_SECRET=changeme_onlyoffice_jwt
+
+#==================================================#
+#              Productivity Services               #
+#==================================================#
+
+# Logseq Configuration
+LOGSEQ_ENABLED=true
+LOGSEQ_PORT=3000
+
+# Mealie Configuration
+MEALIE_ENABLED=false
+MEALIE_PORT=9092
+MEALIE_PG_PASSWORD=changeme_mealie_db
+MEALIE_DEFAULT_USER=admin@example.com
+MEALIE_DEFAULT_PASSWORD=changeme_mealie_admin
+
+# Vikunja Configuration
+VIKUNJA_ENABLED=true
+VIKUNJA_PORT=3456
+VIKUNJA_DB_PASSWORD=changeme_vikunja_db
+VIKUNJA_JWT_SECRET=changeme_vikunja_jwt
+
+#==================================================#
+#            Notification & Messaging              #
+#==================================================#
+
+# ntfy Configuration
+NTFY_ENABLED=true
+NTFY_PORT=80
+NTFY_BASE_URL=https://ntfy.example.com
+NTFY_ADMIN_USERNAME=admin
+NTFY_ADMIN_PASSWORD=changeme_ntfy_admin
+
+# RabbitMQ Configuration
+RABBITMQ_ENABLED=false
+RABBITMQ_PORT=5672
+RABBITMQ_MANAGEMENT_PORT=15672
+RABBITMQ_USERNAME=rabbitmq
+RABBITMQ_PASSWORD=changeme_rabbitmq
+RABBITMQ_COOKIE=changeme_rabbitmq_cookie
+
+#==================================================#
+#              UI & Management Tools               #
+#==================================================#
+
+# Dashy Configuration
+DASHY_ENABLED=true
+DASHY_PORT=4000
+
+# Appsmith Configuration
+APPSMITH_ENABLED=false
+APPSMITH_PORT=8090
+APPSMITH_DEFAULT_USERNAME=admin@example.com
+APPSMITH_DEFAULT_PASSWORD=changeme_appsmith_admin
+
+# Lowcoder Configuration
+LOWCODER_ENABLED=false
+LOWCODER_PORT=3100
+LOWCODER_API_KEY_SECRET=changeme_lowcoder_api
+
+# IT-Tools Configuration
+ITTOOLS_ENABLED=false
+ITTOOLS_PORT=8091
+
+#==================================================#
+#           Infrastructure & Monitoring            #
+#==================================================#
+
+# Portainer Configuration
+PORTAINER_ENABLED=true
+PORTAINER_PORT=9000
+PORTAINER_EDGE_PORT=8000
+PORTAINER_ADMIN_PASSWORD=changeme_portainer_admin
+
+# Uptime-Kuma Configuration
+UPTIME_KUMA_ENABLED=false
+UPTIME_KUMA_PORT=3001
+UPTIME_KUMA_ADMIN_PASSWORD=changeme_kuma_admin
+
+# Caddy Configuration (Reverse Proxy)
+CADDY_ENABLED=false
+CADDY_HTTP_PORT=80
+CADDY_HTTPS_PORT=443
+CADDY_ADMIN_PORT=2019
+
+#==================================================#
+#              External Integrations               #
+#==================================================#
+
+# Email Configuration (for password resets, notifications)
+EMAIL_SERVICE=smtp
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+EMAIL_USERNAME=noreply@example.com
+EMAIL_PASSWORD=changeme_email
+EMAIL_FROM=noreply@example.com
+EMAIL_FROM_NAME="Existential"
+
+# Domain Configuration
+BASE_DOMAIN=example.com
+USE_HTTPS=true
+
+# Cloudflare Configuration (if using)
+CLOUDFLARE_API_TOKEN=
+CLOUDFLARE_ZONE_ID=
+
+#==================================================#
+#                Security Settings                 #
+#==================================================#
+
+# Generate secure values for these
+ENCRYPTION_KEY=changeme_32_char_encryption_key_here
+SESSION_SECRET=changeme_session_secret
+
+# Allow public registration
+ALLOW_REGISTRATION=false
+ALLOW_SOCIAL_LOGIN=false
+
+# IP allowlist (comma-separated, leave empty to allow all)
+ALLOWED_IPS=
+
+#==================================================#
+#            Development Settings                  #
+#==================================================#
+
+# Debug mode (set to false in production)
+DEBUG_MODE=true
+NODE_ENV=development
+
+# API rate limiting
+RATE_LIMIT_MAX=100
+RATE_LIMIT_WINDOW=15
